--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>kekayan's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/Jlimb26/resume/blob/e69f12ee7c8b6edeefdc4008db16def842485d16/Resume%20(JLe2).pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/Jlimb26/resume/blob/e69f12ee7c8b6edeefdc4008db16def842485d16/Resume%20(JLe2).pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
